wrong file route fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- class를 정의하는건 head에 <link> 태그를 통해서 css 파일을 연결시켜 그 속에 정의된 것들을 받아오기 위함이었따.... 일단 class는 임시로 적어두자...-->
       <div class="top_menu">
         <div class="left_menu">
-          <a href="study_realization.html">
+          <a href="index.html">
             <img src="LizNoir_Logo.png">
           </a>
         </div>
