hypertext reference fixed

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         </div>
 
         <div class="right_menu">
-            <a href="#LizNoir?">
+            <a href="index.html">
               LizNoir?
             </a>
-            <a href="#Member">
+            <a href="index.html">
               Member
             </a>
-            <a href="#Discography">
+            <a href="index.html">
               Discography
             </a>
-            <a href="#Video">
+            <a href="index.html">
               Video
             </a>
-            <a href="#Sign Up">
+            <a href="index.html">
               Sign Up
             </a>
         </div>
