--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>LizNoir Fan Page</title>
-    <!--
     <link href="LizNoir_icon.ico" rel="shortcut icon" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-  -->
+    <!--<link rel="stylesheet" href="style.css">-->
   </head>
 
 
