--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 
   <body>
 
+    <!--Top Menu-->
+    <nav class="menu_bar">
+      <div class="top_menu">
+        <div class="left_menu">
+          <a href="index.html">
+            <img src="LizNoir_Logo.png">
+          </a>
+        </div>
+
+        <div class="right_menu">
+            <a href="index.html">
+              LizNoir?
+            </a>
+            <a href="index.html">
+              Member
+            </a>
+            <a href="index.html">
+              Discography
+            </a>
+            <a href="index.html">
+              Video
+            </a>
+            <a href="index.html">
+              Sign Up
+            </a>
+        </div>
+      </div>
+    </nav>
+
+
   </body>
 
 </html>
