toppage image added

--- a/index.html
+++ b/index.html
@@ -20,24 +20,28 @@
         </div>
 
         <div class="right_menu">
-            <a href="index.html">
-              LizNoir?
-            </a>
-            <a href="index.html">
-              Member
-            </a>
-            <a href="index.html">
-              Discography
-            </a>
-            <a href="index.html">
-              Video
-            </a>
-            <a href="index.html">
-              Sign Up
-            </a>
+          <a href="index.html">
+            LizNoir?
+          </a>
+          <a href="index.html">
+            Member
+          </a>
+          <a href="index.html">
+            Discography
+          </a>
+          <a href="index.html">
+            Video
+          </a>
+          <a href="index.html">
+            Sign Up
+          </a>
         </div>
       </div>
     </nav>
+
+    <div class="toppage_img">
+      <img src="https://pbs.twimg.com/media/EN8eFKWXsAMsNzB.jpg">
+    </div>
 
 
   </body>
