member profile added

--- a/index.html
+++ b/index.html
@@ -85,9 +85,241 @@
       </div>
     </section>
 
+    <!--Members-->
+    <section class="member_title">
+      <div class="member">
+        <h2>
+          Member
+        </h2>
+      </div>
+      <div class="intro_member">
 
+        <div id="rio">
+          <div class="profile_main">
+            <div class="profile1">
+              <h3>칸자키 리오</h3>
+              <h4>神崎莉央</h4>
+              <p>승리에 목말라하며,<br>
+                공격적인 스타일을 가진<br>
+                LizNoir의 부동의 센터.<br>
+                <br>
+                활동에 휴식기가 있었으나<br>
+                어떠한 인연을 끊기 위해 부활했다.<br>
+                <br>
+                누구보다 강한 각오로<br>
+                아이돌 업계의 최고를 목표로 한다.</p>
+            </div>
 
+            <div class="profile2">
+              <dl>
+                <dt>키</dt>
+                <dd>160cm</dd>
+              </dl>
+              <dl>
+                <dt>몸무게</dt>
+                <dd>44kg</dd>
+              </dl>
+              <dl>
+                <dt>생일</dt>
+                <dd>8월 28일</dd>
+              </dl>
+              <dl>
+                <dt>별자리</dt>
+                <dd>처녀자리</dd>
+              </dl>
+              <dl>
+                <dt>출신</dt>
+                <dd>사립 츠키노데 고등학교</dd>
+              </dl>
+              <dl>
+                <dt>취미</dt>
+                <dd>걷는 것, 팬케이크 가게 탐방</dd>
+              </dl>
+              <dl>
+                <dt>좋아하는 것</dt>
+                <dd>아이돌, 요리</dd>
+              </dl>
+              <dl>
+                <dt>싫어하는 것</dt>
+                <dd>나가세 마나</dd>
+              </dl>
+            </div>
+          </div>
 
+          <div class="img">
+          </div>
+
+        </div>
+        <div id="aoi">
+          <div class="profile_main">
+            <div class="profile1">
+              <h3>이가와 아오이</h3>
+              <h4>井川葵</h4>
+              <p>감정의 기복이 적어,<br>
+                  항상 냉정한 LizNoir의 브레인.<br>
+                  <br>
+                  자신의 생각을 솔직하게<br>
+                  표현하지만, 태도는 쿨 그 자체.<br>
+                  <br>
+                  데뷔 전부터 동거동락한<br>
+                  칸자키 리오의 가장 큰 이해자이다.</p>
+            </div>
+
+            <div class="profile2">
+              <dl>
+                <dt>키</dt>
+                <dd>157cm</dd>
+              </dl>
+              <dl>
+                <dt>몸무게</dt>
+                <dd>45kg</dd>
+              </dl>
+              <dl>
+                <dt>생일</dt>
+                <dd>6월 19일</dd>
+              </dl>
+              <dl>
+                <dt>별자리</dt>
+                <dd>쌍둥이자리</dd>
+              </dl>
+              <dl>
+                <dt>출신</dt>
+                <dd>사립 츠키노데 고등학교</dd>
+              </dl>
+              <dl>
+                <dt>취미</dt>
+                <dd>없음</dd>
+              </dl>
+              <dl>
+                <dt>좋아하는 것</dt>
+                <dd>디저트, 요리</dd>
+              </dl>
+              <dl>
+                <dt>싫어하는 것</dt>
+                <dd>개</dd>
+              </dl>
+            </div>
+          </div>
+
+          <div class="img">
+          </div>
+
+        </div>
+        <div id="ai">
+          <div class="profile_main">
+            <div class="profile1">
+              <h3>코미야마 아이</h3>
+              <h4>小美山愛</h4>
+              <p>사람을 웃음 짓게 만드는 걸<br>
+                  가장 좋아하는 LizNoir의<br>
+                  무드 메이커.<br>
+                  <br>
+                  확실한 기술을 가지고 있지만,<br>
+                  중요할 때에 터무니없는 서투름을<br>
+                  보이기도 한다.<br>
+                  <br>
+                  농담이 잘 통해서 코코로의 말을<br>
+                  믿는 구석이 있다.</p>
+            </div>
+
+            <div class="profile2">
+              <dl>
+                <dt>키</dt>
+                <dd>164cm</dd>
+              </dl>
+              <dl>
+                <dt>몸무게</dt>
+                <dd>51kg</dd>
+              </dl>
+              <dl>
+                <dt>생일</dt>
+                <dd>2월 9일</dd>
+              </dl>
+              <dl>
+                <dt>별자리</dt>
+                <dd>물병자리</dd>
+              </dl>
+              <dl>
+                <dt>출신</dt>
+                <dd>사립 츠키노데 고등학교</dd>
+              </dl>
+              <dl>
+                <dt>취미</dt>
+                <dd>근력 운동, 집안일 돕기</dd>
+              </dl>
+              <dl>
+                <dt>좋아하는 것</dt>
+                <dd>사람을 웃음 짓게 만드는 일, 청소</dd>
+              </dl>
+              <dl>
+                <dt>싫어하는 것</dt>
+                <dd>어두운 장소, 아버지를 바보 취급하는 사람</dd>
+              </dl>
+            </div>
+          </div>
+
+          <div class="img">
+          </div>
+
+        </div>
+        <div id="kokoro">
+          <div class="profile_main">
+            <div class="profile1">
+              <h3>아카자키 코코로</h3>
+              <h4>赤崎こころ</h4>
+              <p>붙임성 있고 천진난만한<br>
+                  LizNoir의 선봉 대장.<br>
+                  <br>
+                  때때로 독설을 할 때도 있지만,<br>
+                  속을 드러내지 않는다.<br>
+                  <br>
+                  아이와는 서로를 인정하는<br>
+                  동료이나, 종종 짖궃은<br>
+                  장난을 일으키기도 한다.</p>
+            </div>
+
+            <div class="profile2">
+              <dl>
+                <dt>키</dt>
+                <dd>153cm</dd>
+              </dl>
+              <dl>
+                <dt>몸무게</dt>
+                <dd>43kg</dd>
+              </dl>
+              <dl>
+                <dt>생일</dt>
+                <dd>12월 6일</dd>
+              </dl>
+              <dl>
+                <dt>별자리</dt>
+                <dd>사수자리</dd>
+              </dl>
+              <dl>
+                <dt>출신</dt>
+                <dd>사립 레이바 여학원 중등부</dd>
+              </dl>
+              <dl>
+                <dt>취미</dt>
+                <dd>장난치는 것, 귀여운 포즈 연구</dd>
+              </dl>
+              <dl>
+                <dt>좋아하는 것</dt>
+                <dd>서예, 누군가의 곤란한 얼굴</dd>
+              </dl>
+              <dl>
+                <dt>싫어하는 것</dt>
+                <dd>혼자 따돌림 당하는 것</dd>
+              </dl>
+            </div>
+          </div>
+
+          <div class="img">
+          </div>
+
+        </div>
+      </div>
+    </section>
 
   </body>
 
