sign up section added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>LizNoir Fan Page</title>
+    <title>LizNoir Fan Site</title>
     <link href="LizNoir_icon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -19,20 +19,20 @@
           </a>
         </div>
 
-        <div class="right_menu">
-          <a href="index.html">
+        <div class="right_menu" >
+          <a >
             LizNoir?
           </a>
-          <a href="index.html">
+          <a>
             Member
           </a>
-          <a href="index.html">
+          <a>
             Discography
           </a>
-          <a href="index.html">
+          <a>
             Video
           </a>
-          <a href="index.html">
+          <a>
             Sign Up
           </a>
         </div>
@@ -625,7 +625,17 @@
 
     <!--Sign Up-->
     <section class="sign_up">
-      
+      <div class="sign_up_description">
+        <p>
+          <strong>Music Ray'n</strong>의 성우 그룹, <strong>'스피어'</strong>가 연기하고<br>
+          절대적인 퍼포먼스를 선보이는 4인의 아이돌 그룹,<br>
+          <strong>'LizNoir'</strong>를 향한 지지와 응원을<br>
+          다른 매니저 여러분과 함께 나눠보세요.<br>
+        </p>
+        <button>
+          가입하기
+        </button>
+      </div>
     </section>
 
 
